force-app/main/default/objects/Field_Inspection__c/Field_Inspection__c.object-meta.xml
<CustomObject>
    <label>Field Inspection</label>
    <nameField>
        <displayFormat>FI-{0}</displayFormat>
        <label>Field Inspection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Inspections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>