force-app/main/default/objects/Field_Inspection__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Field Inspections</relationshipLabel>
    <relationshipName>Field_Inspections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>