force-app/main/default/objects/Field_Inspection__c/fields/Display_Quality__c.field-meta.xml
<CustomField>
    <fullName>Display_Quality__c</fullName>
    <label>Display Quality</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>