force-app/main/default/objects/Field_Inspection__c/fields/Guidelines_Brand_Display__c.field-meta.xml
<CustomField>
    <fullName>Guidelines_Brand_Display__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guidelines: Brand Display</label>
    <type>Checkbox</type>
</CustomField>