force-app/main/default/objects/Field_Inspection__c/fields/Guidelines_Data_Quality__c.field-meta.xml
<CustomField>
    <fullName>Guidelines_Data_Quality__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guidelines: Data Quality</label>
    <type>Checkbox</type>
</CustomField>