force-app/main/default/objects/Field_Inspection__c/fields/Guidelines_Lead__c.field-meta.xml
<CustomField>
    <fullName>Guidelines_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guidelines: Lead Follow-up</label>
    <type>Checkbox</type>
</CustomField>