force-app/main/default/objects/Field_Inspection__c/fields/Merchandise_Mix__c.field-meta.xml
<CustomField>
    <fullName>Merchandise_Mix__c</fullName>
    <label>Merchandise Mix</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>