force-app/main/default/objects/Field_Inspection__c/fields/Model_Selection__c.field-meta.xml
<CustomField>
    <fullName>Model_Selection__c</fullName>
    <label>Model Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>