force-app/main/default/objects/Field_Inspection__c/fields/Square_Feet_per_Bike__c.field-meta.xml
<CustomField>
    <fullName>Square_Feet_per_Bike__c</fullName>
    <label>Square Feet per Bike</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>